# moteus

./: .bazelrc  README.md
nautilus/: README.md  design_guidelines.md  protocol.md  protocole.md
nautilus/fw/: BUILD  aux_port.h  bldc_servo.cc  bldc_servo.h  bldc_servo_structs.h  board_debug.cc  drv8323.cc  drv8323.h  flash.py  moteus.cc  moteus_controller.cc  moteus_controller.h  moteus_hw.cc  moteus_hw.h  motor_position.h  nautilus_spi_interface.cc  nautilus_spi_interface.h
nautilus/hw/: fp-info-cache  fp-lib-table  nautilus.kicad_dru  nautilus.kicad_pcb  nautilus.kicad_prl  nautilus.kicad_pro  nautilus.kicad_sch  outline.dxf  sym-lib-table
nautilus/hw/libraries/: nautilus.kicad_sym
nautilus/hw/libraries/nautilus.pretty/: BrushlessMotor.kicad_mod  MAX15062AATA+T.stp  MAX15062AATAT.kicad_mod  MountingHole-Plated.kicad_mod  Q5DC_DMM.kicad_mod  QFN50P600X600X80-41N-D.kicad_mod  QFN50P700X700X60-49N-D.kicad_mod  SM05B-SRSS-TB__LF__SN_.stp  SM06B-SRSS-TB__LF__SN_.stp  SRN4018220M.kicad_mod  STM32G474CEU6.stp
nautilus/nautilus_gui/: CMakeLists.txt
nautilus/nautilus_gui/include/: Commutation.h  NautilusDriver.h  NautilusGUI.h  NautilusRegisters.h  Teleplot.h
nautilus/nautilus_gui/src/: Commutation.cpp  Main.cpp  NautilusDriver.cpp  NautilusGUI.cpp
tools/: bazel
